--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ngx-toastr": "^10.0.4",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
+    "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
