--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "ngx-toastr": "^10.0.4",
     "popper.js": "^1.15.0",
